samples/_failures_safe/1761790767_dd10a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e25ceb88.c: In function ‘main’:
./samples/SAFE/__tmp_e25ceb88.c:201:9: error: expected declaration or statement at end of input
  201 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e25ceb88.c:201:9: error: expected declaration or statement at end of input
